# ezmail

./: .gitignore  LICENSE  README.md  README.pt-BR.md  pyproject.toml
ezmail/: __init__.py  core.py  ezmail.py  ezreader.py  ezsender.py  utils.py
ezmail.egg-info/: PKG-INFO  SOURCES.txt
py_ezmail.egg-info/: PKG-INFO  SOURCES.txt
