[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezmail"
version = "1.0.0"
description = "Envie emails totalmente personalizados, em massa, com imagens, anexos, e muita facilidade."
readme = "README.md"
authors = [
    { name = "Luiz Henrique Brunca", email = "luizhenriquebrunca@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["email", "smtp", "html", "anexo", "inline", "automação"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    # Nenhuma dependência externa obrigatória
]

[project.urls]
Homepage = "https://github.com/luizbrunca/ezmail"
Repository = "https://github.com/luizbrunca/ezmail"
Issues = "https://github.com/luizbrunca/ezmail/issues"
